optimsations : hide invisible clusters and swap post images with grey pixel above given zoom level. Still crashes on iOs-Safari, but memory leak seems solved

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -50,8 +50,8 @@ body {
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 1.2em;
     margin:0px; 
-    font-smooth: never;
-    -webkit-font-smoothing : none;
+    /*font-smooth: never;
+    -webkit-font-smoothing : none;*/
 }
 
 /* ============= PAGE ============= */
